--- a/MoviePlaiter.cbp
+++ b/MoviePlaiter.cbp
@@ -18,6 +18,7 @@
 					<Add directory="../MoviePlaiter" />
 					<Add directory="Model" />
 					<Add directory="Utils" />
+					<Add directory="IO" />
 				</Compiler>
 			</Target>
 		</Build>
@@ -32,6 +33,8 @@
 		<Unit filename="Controller/Controller.h" />
 		<Unit filename="Formatter/OutputFormatter.cpp" />
 		<Unit filename="Formatter/OutputFormatter.h" />
+		<Unit filename="IO/FileReader.cpp" />
+		<Unit filename="IO/FileReader.h" />
 		<Unit filename="IO/FileWriter.cpp" />
 		<Unit filename="IO/FileWriter.h" />
 		<Unit filename="Model/Movie.cpp" />
